--- a/index.html
+++ b/index.html
@@ -3,10 +3,70 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>My Project</title>
+    <title>Master Thesis - Visualization Results</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            text-align: center;
+            background-color: #f8f9fa;
+        }
+        h2 {
+            margin-top: 40px;
+        }
+        .video-container {
+            display: flex;
+            justify-content: center;
+            gap: 20px;
+            margin: 20px;
+            flex-wrap: wrap;
+        }
+        video {
+            width: 45%;
+            max-width: 400px;
+            border-radius: 10px;
+            border: 2px solid #ddd;
+        }
+    </style>
 </head>
 <body>
-    <h1>Welcome to My Project Page</h1>
-    <p>This is an overview of my project.</p>
+
+    <h1>Master Thesis - Visualization Results</h1>
+
+    <h2>Comparison of Density</h2>
+    <div class="video-container">
+        <video controls>
+            <source src="videos/density_before.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <video controls>
+            <source src="videos/density_after.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <h2>Comparison of A*</h2>
+    <div class="video-container">
+        <video controls>
+            <source src="videos/astar_before.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <video controls>
+            <source src="videos/astar_after.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
+    <h2>Comparison of Rotation</h2>
+    <div class="video-container">
+        <video controls>
+            <source src="videos/rotation_variance_base.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+        <video controls>
+            <source src="videos/rotation_variance_aug.mp4" type="video/mp4">
+            Your browser does not support the video tag.
+        </video>
+    </div>
+
 </body>
 </html>
