mod video file names

--- a/index.html
+++ b/index.html
@@ -56,11 +56,11 @@
     <h2>Comparison of Density</h2>
     <div class="video-container">
         <video autoplay muted loop controls>
-            <source src="videos/density_1.mp4" type="video/mp4">
+            <source src="videos/density_before.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <video autoplay muted loop controls>
-            <source src="videos/density_2.mp4" type="video/mp4">
+            <source src="videos/density_after.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -68,11 +68,11 @@
     <h2>Comparison of A*</h2>
     <div class="video-container">
         <video autoplay muted loop controls>
-            <source src="videos/astar_1.mp4" type="video/mp4">
+            <source src="videos/astar_before_1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
         <video autoplay muted loop controls>
-            <source src="videos/astar_2.mp4" type="video/mp4">
+            <source src="videos/astar_after_1.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
@@ -80,13 +80,13 @@
     <h2>Comparison of Rotation</h2>
     <div class="single-video">
         <video autoplay muted loop controls>
-            <source src="videos/rotation_1.mp4" type="video/mp4">
+            <source src="videos/rotation_variance_base.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
     <div class="single-video">
         <video autoplay muted loop controls>
-            <source src="videos/rotation_2.mp4" type="video/mp4">
+            <source src="videos/rotation_variance_aug.mp4" type="video/mp4">
             Your browser does not support the video tag.
         </video>
     </div>
